<resources>
    <string name="app_name">activity5</string>
    <string name="bhajanofShreeRagunath">हमारे साथ श्री रघुनाथ तो किस बात की चिंता \n हमारे साथ श्री रघुनाथ तो किस बात की चिंता \n शरण में रख दिया जब माथ तो किस बात की चिंता \n शरण में रख दिया जब माथा तो किस बात की चिंता \n \n (संगीत) \n \n किया करते हो तुम दिन रात क्यों बिन बात की चिंता \n किया करते हो तुम दिन रात क्यों बिन बात की चिंता \n किया करते हो तुम दिन रात क्यों बिन बात की चिंता \n किया करते हो तुम दिन रात क्यों बिन बात की चिंता \n \n तेरे स्वामी \n तेरे स्वामी को रहती है तेरी हर बात की चिंता \n तेरे स्वामी को रहती है तेरी हर बात की चिंता \n \n हमारे साथ श्री रघुनाथ तो किस बात की चिंता \n हमारे साथ श्री रघुनाथ तो किस बात की चिंता \n \n (संगीत) \n \n न खाने की, न पीने की, न मरने की, न जीने की \n न खाने की, न पीने की, न मरने की, न जीने की \n न खाने की, न पीने की, न मरने की, न जीने की \n न खाने की, न पीने की, न मरने की, न जीने की \n \n रहे हर स्वास \n रहे हर स्वास में भगवान के प्रिय नाम की चिंता \n रहे हर स्वास में भगवान के प्रिय नाम की चिंता \n \n हमारे साथ श्री रघुनाथ तो किस बात की चिंता \n हमारे साथ श्री रघुनाथ तो किस बात की चिंता \n \n (संगीत) \n \n विभीषण को अभय वर दे किया लंकेश पल भर में \n विभीषण को अभय वर दे किया लंकेश पल भर में \n विभीषण को अभय वर दे किया लंकेश पल भर में \n विभीषण को अभय वर दे किया लंकेश पल भर में \n \n उन्ही का हाँ, उन्ही का हाँ \n उन्ही का हा कर रहे गुणगान तो किस बात की चिंता \n उन्ही का हा कर रहे गुणगान तो किस बात की चिंता \n \n हमारे साथ श्री रघुनाथ तो किस बात की चिंता \n हमारे साथ श्री रघुनाथ तो किस बात की चिंता \n \n (संगीत) \n \n हुई भक्त पर कृपा बनाया दास प्रभु अपना \n हुई भक्त पर कृपा बनाया दास प्रभु अपना \n हुई भक्त पर कृपा बनाया दास प्रभु अपना \n हुई भक्त पर कृपा बनाया दास प्रभु अपना \n \n उन्ही के हाथ \n उन्ही के हाथ में अब हाथ तो किस बात की चिंता \n उन्ही के हाथ में अब हाथ तो किस बात की चिंता \n \n हमारे साथ श्री रघुनाथ तो किस बात की चिंता \n हमारे साथ श्री रघुनाथ तो किस बात की चिंता \n \n शरण में रख दिया जब माथ तो किस बात की चिंता \n शरण में रख दिया जब माथ तो किस बात की चिंता \n \n हाँ हाँ किस बात की चिंता \n अरे किस बात की चिंता \n किस बात की चिंता</string>
    <string name="title">Bhajan : Hamare Sath Shri Raghunath</string>
    <string name="audio">Audio</string>
    <string name="bhajan">Bhajan</string>
    <string name="suggestion">Suggestion</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="go_back">Go Back</string>
    <string name="enter_username">Enter UserName</string>
    <string name="enter_password">Enter Password</string>
</resources>