<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Activity5"
        android:background="#2a52be"
        app:titleTextColor="#fff"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="audio"
        android:text="@string/audio"
        android:id="@+id/audio"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="bhajan"
        android:text="@string/bhajan"
        android:id="@+id/bhajan"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/audio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="suggestion"
        android:text="@string/suggestion"
        android:id="@+id/suggestion"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/bhajan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="signup"
        android:text="@string/signup"
        android:id="@+id/signup"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/suggestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="@string/login"
        android:id="@+id/login"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>